--- a/assets/css/resp.css
+++ b/assets/css/resp.css
@@ -14,6 +14,13 @@
   .cont ul {
     padding-top: 50px;
   }
+  .panels .visual h2 {
+    display: none;
+  }
+  .goal {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 @media (min-width: 768px){
 
