--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,9 @@ p {
   font-size: 15px;
   color: #666666;
 }
+a:hover {
+  text-decoration: none;
+}
 .spacer {
   height: 120px;
   background-color: #fff;
@@ -73,8 +76,7 @@ p {
   color: #fff;
 }
 .black {
-  background-color: #464646;
-
+  background-color: #2e2a2b;
 }
 .arrow {
   position: absolute;
@@ -172,9 +174,17 @@ p {
 .clicked div:before,
 .clicked div:after {
   top: 0;
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
   transform: rotate(45deg);
 }
 .clicked div:after {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
 .open {
@@ -234,15 +244,23 @@ p {
 .image_bg img {
   left: 50%;
   position: absolute;
-  transform: translate(-50%, 0);
   min-height: 100%;
   min-width: 100%;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
 }
 .image_bg h2 {
-  transform: translatey(400px);
   position: relative;
   color: #fefefe;
   text-decoration: underline;
+  -webkit-transform: translatey(400px);
+  -moz-transform: translatey(400px);
+  -ms-transform: translatey(400px);
+  -o-transform: translatey(400px);
+  transform: translatey(400px);
 }
 .panels {
   margin-top: 400px;
@@ -265,6 +283,10 @@ p {
   right: 10px;
   width: 20px;
   height: 8px;
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
   transform: rotate(-90deg);
 }
 .panel div {
@@ -283,7 +305,21 @@ p {
   border-bottom-right-radius: 80px;
 }
 .panel:hover .arrow_sm {
+  -webkit-transform: rotate(-48deg);
+  -moz-transform: rotate(-48deg);
+  -ms-transform: rotate(-48deg);
+  -o-transform: rotate(-48deg);
   transform: rotate(-48deg);
+}
+.panels .visual img {
+  max-width: 100%;
+  margin: auto;
+}
+.panels .visual h2 {
+  color: var(--main-blue);
+}
+.panels .text p {
+  color: #fff;
 }
 /* image and panels---end*/
 
@@ -347,17 +383,29 @@ p {
   opacity: 0;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   transition: all 2s;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 .project_block img {
   width: 100%;
   height: 100%;
   transition: all 2s;
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
   transform: scale(1.1);
 }
 .project_block:hover img {
   opacity: 0.5;
+  -webkit-transform: scale(1.3) rotate(3deg);
+  -moz-transform: scale(1.3) rotate(3deg);
+  -ms-transform: scale(1.3) rotate(3deg);
+  -o-transform: scale(1.3) rotate(3deg);
   transform: scale(1.3) rotate(3deg);
 }
 .project_block:hover .centered {
