--- a/views/index.html
+++ b/views/index.html
@@ -11,15 +11,15 @@
     <meta name="keywords" content="სიმპტომები, შემოწმება, ონლაინ, ვებ, კონსულტაცია">
     <meta name="author" content="MadSpider">
     <!-- <link rel="shortcut icon" href="icon.ico"> -->
-    <!-- <link href='assets/css/fonts/font.css' rel='stylesheet' type='text/css'> -->
-    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css"> -->
-    <!-- <link rel="stylesheet" href="assets/fonts/mad-font/css/mad-font.css"> -->
+    <!-- <link href='views/assets/css/fonts/font.css' rel='stylesheet' type='text/css'> -->
+    <link rel="stylesheet" href="views/assets/plugins/bootstrap/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="views/assets/plugins/font-awesome/css/font-awesome.css"> -->
+    <!-- <link rel="stylesheet" href="views/assets/fonts/mad-font/css/mad-font.css"> -->
     <!-- myCSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="assets/css/resp.css">
+    <link rel="stylesheet" href="views/assets/css/style.css">
+    <link rel="stylesheet" href="views/assets/css/resp.css">
 
-    <script defer src="assets/plugins/fontawesome-all.js"></script>
+    <script defer src="views/assets/plugins/fontawesome-all.js"></script>
 
 </head>
 <body>
@@ -44,7 +44,7 @@
   </nav>
 
     <div class="image_bg">
-      <img src="assets/img/bg.jpg">
+      <img src="views/assets/img/bg.jpg">
       <h2>ჩვენ ვზრუნავთ თქვენს ჯანმრთელობაზე</h3>
     </div>
 
@@ -54,7 +54,7 @@
       <div class=" col-xs-6 col-sm-4">
         <div class="panel">
           <a href="#">
-          <div class="visual"><img src="assets/img/icons/team.svg" class="img-responsive" height="140">
+          <div class="visual"><img src="views/assets/img/icons/team.svg" class="img-responsive" height="140">
             <h2>ჩვენი გუნდი</h2>
           </div>
           <div class="text">
@@ -66,7 +66,7 @@
       <div class=" col-xs-6 col-sm-4">
         <div class="panel">
           <a href="#">
-          <div class="visual"><img src="assets/img/icons/projects.svg" class="img-responsive" height="140">
+          <div class="visual"><img src="views/assets/img/icons/projects.svg" class="img-responsive" height="140">
             <h2>პროექტები</h2>
           </div>
           <div class="text">
@@ -78,7 +78,7 @@
       <div class=" col-xs-6 col-sm-4">
         <div class="panel">
           <a href="#">
-          <div class="visual"><img src="assets/img/icons/news.svg" class="img-responsive" height="140">
+          <div class="visual"><img src="views/assets/img/icons/news.svg" class="img-responsive" height="140">
             <h2>სიახლეები</h2>
           </div>
           <div class="text">
@@ -98,7 +98,7 @@
       <div class="row members">
         <div class="col-xs-6 col-sm-4">
           <div class="member">
-            <div class="visual"><img src="assets/img/upload/profile.jpg" class="img-responsive" width="200"></div>
+            <div class="visual"><img src="views/assets/img/upload/profile.jpg" class="img-responsive" width="200"></div>
             <div class="text">
               <h4>დავით შოვნაძე</h4>
               <h6>დამფუძნებელი</h6>
@@ -110,7 +110,7 @@
         </div>
         <div class="col-xs-6 col-sm-4">
           <div class="member">
-            <div class="visual"><img src="assets/img/upload/profile.jpg" class="img-responsive" width="200"></div>
+            <div class="visual"><img src="views/assets/img/upload/profile.jpg" class="img-responsive" width="200"></div>
             <div class="text">
               <h4>დავით შოვნაძე</h4>
               <h6>დამფუძნებელი</h6>
@@ -122,7 +122,7 @@
         </div>
         <div class="col-xs-6 col-sm-4">
           <div class="member">
-            <div class="visual"><img src="assets/img/upload/profile.jpg" class="img-responsive" width="200"></div>
+            <div class="visual"><img src="views/assets/img/upload/profile.jpg" class="img-responsive" width="200"></div>
             <div class="text">
               <h4>დავით შოვნაძე</h4>
               <h6>დამფუძნებელი</h6>
@@ -150,31 +150,31 @@
 
         <div class="row" style="margin-top: -10px;">
           <div class="col-xs-6 col-md-4 project_block">
-            <img src="assets/img/upload/projects/img_1.jpg" class="img-responsive">
+            <img src="views/assets/img/upload/projects/img_1.jpg" class="img-responsive">
             <h3 class="centered">აბლაბუდა</h3>
           </div>
           <div class="col-xs-6 col-md-4 project_block">
-            <img src="assets/img/upload/projects/img_2.jpg" class="img-responsive">
+            <img src="views/assets/img/upload/projects/img_2.jpg" class="img-responsive">
             <h3 class="centered">აბლაბუდა</h3>
           </div>
           <div class="col-xs-6 col-md-4 project_block">
-            <img src="assets/img/upload/projects/img_3.jpg" class="img-responsive">
+            <img src="views/assets/img/upload/projects/img_3.jpg" class="img-responsive">
             <h3 class="centered">აბლაბუდა</h3>
           </div>
           <div class="col-xs-6 col-md-4 project_block">
-            <img src="assets/img/upload/projects/img_4.jpg" class="img-responsive">
+            <img src="views/assets/img/upload/projects/img_4.jpg" class="img-responsive">
             <h3 class="centered">აბლაბუდა</h3>
           </div>
           <div class="col-xs-6 col-md-4 project_block">
-            <img src="assets/img/upload/projects/img_5.jpg" class="img-responsive">
+            <img src="views/assets/img/upload/projects/img_5.jpg" class="img-responsive">
             <h3 class="centered">აბლაბუდა</h3>
           </div>
           <div class="col-xs-6 col-md-4 project_block">
-            <img src="assets/img/upload/projects/img_6.jpg" class="img-responsive">
+            <img src="views/assets/img/upload/projects/img_6.jpg" class="img-responsive">
             <h3 class="centered">აბლაბუდა</h3>
           </div>
           <div class="col-xs-6 col-md-4 project_block">
-            <img src="assets/img/upload/projects/img_7.jpg" class="img-responsive">
+            <img src="views/assets/img/upload/projects/img_7.jpg" class="img-responsive">
             <h3 class="centered">აბლაბუდა</h3>
           </div>
           <div class="col-xs-6 col-md-4 project_block" id="more_projects">
@@ -182,7 +182,7 @@
             <div class="arrow arrow_bg"></div>
           </div>
           <div class="col-xs-6 col-md-4 project_block">
-            <img src="assets/img/upload/projects/img_8.jpg" class="img-responsive">
+            <img src="views/assets/img/upload/projects/img_8.jpg" class="img-responsive">
             <h3 class="centered">აბლაბუდა</h3>
           </div>
         </div>
@@ -335,9 +335,9 @@
 
 
 <!-- Javascript -->
-<script type="text/javascript" src="assets/plugins/jquery-3.2.1.min.js"></script>
-<!-- <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script> -->
-<script type="text/javascript" src="assets/js/main.js"></script>
+<script type="text/javascript" src="views/assets/plugins/jquery-3.2.1.min.js"></script>
+<!-- <script type="text/javascript" src="views/assets/plugins/bootstrap/js/bootstrap.min.js"></script> -->
+<script type="text/javascript" src="views/assets/js/main.js"></script>
 
 </body>
 </html>
