+ admin panel + ajax

--- a/views/assets/css/resp.css
+++ b/views/assets/css/resp.css
@@ -21,6 +21,9 @@
     padding-left: 0;
     padding-right: 0;
   }
+  #news .col-md-12 {
+    max-width: 100%;
+  }
 }
 @media (min-width: 768px){
 
