--- a/views/admin.html
+++ b/views/admin.html
@@ -3,8 +3,8 @@ if (session_status() == PHP_SESSION_NONE) {
     session_start();
 }
 
-if(!isset($_SESSION['id11']))
-	header('Location: ../admin.php');
+if($_SESSION['role'] != 'ADMIN')
+    header('Location: index.php');
 ?>
 
 <!DOCTYPE html>
