--- a/views/login.html
+++ b/views/login.html
@@ -4,7 +4,7 @@ if (session_status() == PHP_SESSION_NONE) {
 }
 
 if(isset($_SESSION['id11']))
-  header('Location: ../index.php');
+  header('Location: index.php');
 ?>
 <!DOCTYPE html>
 <html>
