--- a/views/register.html
+++ b/views/register.html
@@ -10,7 +10,7 @@
 
 <div id="id01" class="modal">
 
-  <form class="modal-content animate" action="../index.php" method="post">
+  <form class="modal-content animate" action="index.php" method="post">
 
 
     <div class="container">
