--- a/views/admin.html
+++ b/views/admin.html
@@ -10,8 +10,8 @@ if($_SESSION['role'] != 'ADMIN')
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="assets/css/admin_panel.css">
-  <script defer src="assets/plugins/fontawesome-all.js"></script>
+  <link rel="stylesheet" href="views/assets/css/admin_panel.css">
+  <script defer src="views/assets/plugins/fontawesome-all.js"></script>
 </head>
 <body>
 
@@ -47,7 +47,7 @@ for (i = 0; i < dropdown.length; i++) {
   });
 }
 </script>
-<script type="text/javascript" src="assets/plugins/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="assets/js/admin.js"></script>
+<script type="text/javascript" src="views/assets/plugins/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="views/assets/js/admin.js"></script>
 </body>
 </html>
