--- a/views/assets/css/admin_panel.css
+++ b/views/assets/css/admin_panel.css
@@ -21,7 +21,20 @@ input[type=text], input[type=password], input[type=email] {
     margin: 8px 0;
     display: inline-block;
     border: 1px solid #ccc;
+    border-radius: 4px;
     box-sizing: border-box;
+}
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    float: right;
+}
+input[type=submit]:hover {
+    background-color: #45a049;
 }
 h1 {
   margin: 0;
@@ -153,7 +166,7 @@ h1 {
 }
 .panel {
   padding: 8px;
-  background-color: #e9e9e9;
+  background-color: #f2f2f2;
   border: 1px solid black;
   margin: 40px 0 15px 15px;
 }
@@ -172,6 +185,22 @@ h1 {
   text-align: center;
   display: inline-block;
   border: 1px solid black;
+}
+.col-25 {
+    float: left;
+    width: 25%;
+    margin-top: 6px;
+}
+
+.col-75 {
+    float: left;
+    width: 75%;
+    margin-top: 6px;
+}
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
 }
 /*-----------error*/
 
@@ -197,5 +226,12 @@ h1 {
     }
     .cancelbtn {
        width: 100%;
+    }
+}
+
+@media (max-width: 600px) {
+    .col-25, .col-75, input[type=submit] {
+        width: 100%;
+        margin-top: 0;
     }
 }
