--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -113,6 +113,85 @@ a:hover {
  {}/* for bug  */
 /* general---end */
 
+
+/* Modal Content */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+.modal h3 {
+  margin: 5px;
+  color: #696969;
+}
+.modal .container {
+  background-color: #f2f2f2;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 720px;
+}
+/* Modal Content (image) */
+.modal img,
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+/* Add Animation */
+.modal-content {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)}
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)}
+    to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+    /* position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1; */
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+    .modal img,
+    .modal-content {
+        width: 100%;
+    }
+}
+
+/* end modal */
 /*  menu  */
 
 .menu {
@@ -377,6 +456,9 @@ a:hover {
   padding-right: 0;
   overflow: hidden;
 }
+.project_block p {
+  display: none;
+}
 .centered {
   position: absolute;
   opacity: 0;
@@ -461,6 +543,12 @@ a:hover {
   height: 5px;
   border-radius: 100%;
   bottom: 0;
+}
+.morecontent span {
+    display: none;
+}
+.morelink {
+    display: block;
 }
 .arrow_md {
   position: relative;
