--- a/views/index.html
+++ b/views/index.html
@@ -24,6 +24,17 @@
 </head>
 <body>
 
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+    <div class="container modal-content">
+      <span class="close">&times;</span>
+      <img id="img01">
+      <h3 id="title"></h3>
+      <p id="desc"></p>
+    </div>
+  </div>
+
+  <!-- modal  -->
 <div class="spacer"></div>
 
 <div class="frame">
@@ -39,7 +50,7 @@
           <div data-name="projects" class="menu_btn projects_btn">პროექტები</div>
           <div data-name="news" class="menu_btn news_btn">სიახლეები</div>
           <div data-name="contact" class="menu_btn contact_btn">კონტაქტი</div>
-          <?php 
+          <?php
             if($_SESSION['role'] == 'ADMIN')
                 echo '<a href="index.php?adminpage=1"><div class="menu_btn contact_btn">მართვა</div></a>';
           ?>
@@ -55,7 +66,7 @@
 
     <div class="container-fluid panels">
     <div class="row">
-      <div class=" col-xs-6 col-sm-4">
+      <div data-name="team" class="menu_btn col-xs-6 col-sm-4">
         <div class="panel">
           <a href="#">
           <div class="visual"><img src="views/assets/img/icons/team.svg" class="img-responsive" height="140">
@@ -67,7 +78,7 @@
           </div></a>
         </div>
       </div>
-      <div class=" col-xs-6 col-sm-4">
+      <div data-name="projects" class="menu_btn col-xs-6 col-sm-4">
         <div class="panel">
           <a href="#">
           <div class="visual"><img src="views/assets/img/icons/projects.svg" class="img-responsive" height="140">
@@ -79,7 +90,7 @@
           </div></a>
         </div>
       </div>
-      <div class=" col-xs-6 col-sm-4">
+      <div data-name="news" class="menu_btn col-xs-6 col-sm-4">
         <div class="panel">
           <a href="#">
           <div class="visual"><img src="views/assets/img/icons/news.svg" class="img-responsive" height="140">
@@ -139,7 +150,7 @@
       </div>
 
       <div class="goal text" id="tAbout">
-      
+
       </div>
     </section>
 
@@ -150,6 +161,8 @@
       </div>
 
         <div class="row" id="tProjects" style="margin-top: -10px;">
+
+
           <!-- <div class="col-xs-6 col-md-4 project_block">
             <img src="views/assets/img/upload/projects/img_1.jpg" class="img-responsive">
             <h3 class="centered">აბლაბუდა</h3>
@@ -262,7 +275,6 @@
         <div class="arrow arrow_md"></div>
       </div>
 
-
           <div class="row contact black">
             <div class="col-md-8">
           <form id="contact-form" method="post" action="" role="form">
@@ -325,8 +337,6 @@
     </div>
     </div>   <!-- bg -->
   </div>   <!-- frame -->
-
-
 
 
 
