--- a/views/stack.html
+++ b/views/stack.html
@@ -15,7 +15,38 @@
       <input type="submit">
       </form>
     </div>
-  </div>
+
+    <!-- <form action="/action_page.php">
+      <div class="row">
+        <div class="col-25">
+          <label for="fname">First Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="lname">Status</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="status" name="status" placeholder="status...">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-25">
+          <label for="subject">Subject</label>
+        </div>
+        <div class="col-75">
+          <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <input type="submit" value="Submit">
+      </div>
+    </form>
+  </div> -->
 
   <div class="panel team">
   </div>
