--- a/views/AdminLTE-2.4.3/pages/custom/edit.html
+++ b/views/AdminLTE-2.4.3/pages/custom/edit.html
@@ -79,7 +79,18 @@
             <li class="active"><a href="admin.php?view=edit"><i class="fa fa-circle-o"></i>Edit</a></li>
           </ul>
         </li>
-        <li><a href="admin.php?view=logs"><i class="fa fa-table"></i> <span>Transactions log</span></a></li>
+        <li class="treeview">
+          <a href="#"><i class="fa fa-edit"></i> <span>Add/edit News</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="admin.php?view=add_news"><i class="fa fa-circle-o"></i>Add</a></li>
+            <li><a href="admin.php?view=edit_news"><i class="fa fa-circle-o"></i>Edit</a></li>
+          </ul>
+        </li>
+        <li><a href="admin.php?view=edit_about"><i class="fa fa-table"></i> <span>Edit about us</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
