--- a/views/AdminLTE-2.4.3/pages/custom/edit_about.html
+++ b/views/AdminLTE-2.4.3/pages/custom/edit_about.html
@@ -70,14 +70,14 @@
       <!-- Sidebar Menu -->
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header">MENU</li>
-        <li class="treeview active">
+        <li class="treeview">
           <a href="#"><i class="fa fa-edit"></i> <span>Add/edit Projects</span>
             <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
           </a>
           <ul class="treeview-menu">
-            <li class="active"><a href="admin.php?view=add"><i class="fa fa-circle-o"></i>Add</a></li>
+            <li><a href="admin.php?view=add"><i class="fa fa-circle-o"></i>Add</a></li>
             <li><a href="admin.php?view=edit"><i class="fa fa-circle-o"></i>Edit</a></li>
           </ul>
         </li>
@@ -92,7 +92,7 @@
             <li><a href="admin.php?view=edit_news"><i class="fa fa-circle-o"></i>Edit</a></li>
           </ul>
         </li>
-        <li><a href="admin.php?view=edit_about"><i class="fa fa-table"></i> <span>Edit about us</span></a></li>
+        <li class="active"><a href="admin.php?view=edit_about"><i class="fa fa-table"></i> <span>Edit about us</span></a></li>
       </ul>
       <!-- /.sidebar-menu -->
     </section>
@@ -114,7 +114,7 @@
 
       <div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Add new project</h3>
+          <h3 class="box-title">Edit about us</h3>
         </div>
 
         <form class="form-add" role="form" method="post" action="loader.php">
@@ -123,12 +123,6 @@
             <div class="form-group">
               <label for="titleInput">Title</label>
               <input type="text" name="name" class="form-control" id="titleInput" placeholder="title ...">
-            </div>
-
-            <div class="form-group">
-              <label for="imgInput">Cover image</label>
-              <input type="file" name="img" id="imgInput">
-              <p class="help-block">only 4:3 resolution images</p>
             </div>
 
             <div class="form-group">
